# AI-Teaching-Labs

Deep Learning/Module 1/keras-tensorflow/: .gitignore  Pima_Diabetes_Nen_Tang_Deep_Learning_Keras.ipynb  README.md  pyproject.toml
Deep Learning/Module 1/keras-tensorflow/01_Kien-truc-DNN-va-Backpropagation/: 01_Xay_dung_mo_hinh_DNN_Keras.ipynb  keras_utils.py
Deep Learning/Module 1/keras-tensorflow/02_Debug-gradient-Gradient-Checking/: 02_Kiem_tra_gradient_Keras.ipynb  keras_utils.py
Deep Learning/Module 1/keras-tensorflow/03_Vanishing-Exploding-gradient-va-Khoi-tao-trong-so/: 03_Khoi_tao_trong_so_Keras.ipynb  keras_utils.py
Deep Learning/Module 1/keras-tensorflow/04_SGD-Momentum-Adam-Toi-uu-hoa/: 04_Toi_uu_hoa_Keras.ipynb  keras_utils.py
Deep Learning/Module 1/keras-tensorflow/05_Batch-Norm-Layer-Norm/: 05_Batch_Norm_Layer_Norm_Keras.ipynb  keras_utils.py
Deep Learning/Module 1/source/: README.md  pyproject.toml
Deep Learning/Module 1/source/01_Kien-truc-DNN-va-Backpropagation/: main.py  model.py  utils.py
Deep Learning/Module 1/source/02_Debug-gradient-Gradient-Checking/: main.py  model.py  utils.py
Deep Learning/Module 1/source/03_Vanishing-Exploding-gradient-va-Khoi-tao-trong-so/: main.py  model.py  utils.py
Deep Learning/Module 1/source/04_SGD-Momentum-Adam-Toi-uu-hoa/: main.py  model.py  utils.py
Deep Learning/Module 1/source/05_Batch-Norm-Layer-Norm/: main.py  model.py  utils.py
MOOC1/W4A1/: Building_your_Deep_Neural_Network_Step_by_Step.ipynb
MOOC2/W1A3/: Gradient_Checking.ipynb
(+25 files in other folders)
